feat:Add the full from for the billfrompage

--- a/templates/bill_form_page.html
+++ b/templates/bill_form_page.html
@@ -12,7 +12,7 @@
         <hr>
 
         <p>First FlateMate</p>
-        {{billform.name1.label}} {{billfrom.name1}}
+        {{billform.name1.label}} {{billform.name1}}
         <br>
         {{billform.days_in_house1.label}} {{billform.days_in_house1}}
         <hr>
@@ -20,8 +20,9 @@
         <p>Second FlateMate</p>
         {{billform.name2.label}} {{billform.name2}}
         <br>
-        {{billform.days_in_house2}} {{billform.days_in_house2}}
-        
+        {{billform.days_in_house2.label}} {{billform.days_in_house2}}
+        <br>
+        {{billform.button}}
       </form> 
     </body>
 </HTML>
