Added the from button

--- a/templates/bill_form_page.html
+++ b/templates/bill_form_page.html
@@ -5,7 +5,7 @@
     </head>
     <body>
       <h2>Bill Form</h2> 
-      <form>
+      <form action = "/results" method = "post">
         {{billform.bill_amt.label}} {{billform.bill_amt}}
         <br>
         {{billform.bill_period.label}} {{billform.bill_period}}
