updating the link tag to add css file

--- a/templates/bill_form_page.html
+++ b/templates/bill_form_page.html
@@ -2,6 +2,7 @@
 <HTML lang="en">
     <head>
         <title>Bill Form</title>
+        <link rel="stylesheet" href="/static/bill_form_page.css">
     </head>
     <body>
       <h2>Bill Form</h2> 
