--- a/static/index.css
+++ b/static/index.css
@@ -26,3 +26,21 @@
 .btn:hover{
     background-color: gray;
 }
+
+.footer{
+    text-align: center;
+    padding: 20px 0px;
+    background-color: #000;
+    color: #fff;
+    margin-top: 40px;
+}
+.footer a {
+    color:#fff;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: color 0.3s;
+}
+.footer a:hover {
+    color: #1abc9c;
+
+}
