feat:add the footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,16 @@
     
         <a href={{url_for('Bill_Form_Page')}} class="btn"> Go to bill page</a>
     </section>
-
+    <footer class="footer">
+        <p>&copy; 2025 Flatemate Bill Splitter. All rights reserved</p> 
+        <!-- &coyy will print copyright symbol (©) -->
+         <p>
+            S Giridharan |
+            <a href = " " target="_blank">giriYT26</a> <br>
+            Project link |
+            <a href ="https://github.com/giriYT26/Flatemate_bill_WebApp" target="_blank">GitHub</a>
+            <!-- the target paramenter target =" _blank " - it will open the website in new page-->
+         </p>
+    </footer>
 </body>
 </html>
