feat:fixing typo

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>FlateMateBill</title>
+    <title>flatmateBill</title>
     <link rel="stylesheet" href="/static/index.css">
 </head>
 <body>
     <div class = "header">
-        <h1>Welcome to Flatemate Bill Splitter</h1>
+        <h1>Welcome to Flatmate Bill Splitter</h1>
     </div>
     <section id = "About" class = "section">
         <h2>About This Page</h2>
         <p>
-            This web application helps flatemates easily calculate and split their household bills 
+            This web application helps flatmates easily calculate and split their household bills 
             based on the number of days each person has stayed in the house.<br>  
-            Simply fill in the bill amount, the billing period, and the number of days each flatemate stayed.  
+            Simply fill in the bill amount, the billing period, and the number of days each flatmate stayed.  
             The app will calculate how much each person needs to contribute.
         </p>
     </section>
@@ -28,13 +28,13 @@
         <a href={{url_for('Bill_Form_Page')}} class="btn"> Go to bill page</a>
     </section>
     <footer class="footer">
-        <p>&copy; 2025 Flatemate Bill Splitter. All rights reserved</p> 
+        <p>&copy; 2025 Flatmate Bill Splitter. All rights reserved</p> 
         <!-- &coyy will print copyright symbol (©) -->
          <p>
             S Giridharan |
             <a href = " " target="_blank">giriYT26</a> <br>
             Project link |
-            <a href ="https://github.com/giriYT26/Flatemate_bill_WebApp" target="_blank">GitHub</a>
+            <a href ="https://github.com/giriYT26/flatmate_bill_WebApp" target="_blank">GitHub</a>
             <!-- the target paramenter target =" _blank " - it will open the website in new page-->
          </p>
     </footer>
