--- a/templates/results_page.html
+++ b/templates/results_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>FlateMate Bill Result</title>
+        <title>FlatMate Bill Result</title>
     </head>
     <body>
         <h2>The Amount of money each need to pay</h2>
