--- a/templates/bill_form_page.html
+++ b/templates/bill_form_page.html
@@ -12,13 +12,13 @@
         {{billform.bill_period.label}} {{billform.bill_period}}
         <hr>
 
-        <p>First FlateMate</p>
+        <p>First FlatMate</p>
         {{billform.name1.label}} {{billform.name1}}
         <br>
         {{billform.days_in_house1.label}} {{billform.days_in_house1}}
         <hr>
 
-        <p>Second FlateMate</p>
+        <p>Second FlatMate</p>
         {{billform.name2.label}} {{billform.name2}}
         <br>
         {{billform.days_in_house2.label}} {{billform.days_in_house2}}
