add css to the result page

--- a/templates/results_page.html
+++ b/templates/results_page.html
@@ -2,10 +2,18 @@
 <html lang="en">
     <head>
         <title>FlatMate Bill Result</title>
+        <link rel= "stylesheet" href="/static/result.css">
     </head>
     <body>
-        <h2>The Amount of money each need to pay</h2>
-        {{name1}} pays {{amount1}} <br>
-        {{name2}} pays {{amount2}} 
+        <div class="header">
+            <h1>Result</h1>
+        </div>
+        <section class="section">
+            <h2>The Amount of money each need to pay</h2>
+            <p>
+                {{name1}} pays {{amount1}} <br>
+                {{name2}} pays {{amount2}} 
+            </p>
+        </section>
     </body>
 </html>
